# p4-image-classifier-dashboard

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  dashboard.cpp  dashboard.h  p4-image-classifier-dashboard.cpp  server.py
proto/cpp/: cpp_proto_compile.bat  hello.grpc.pb.cc  hello.grpc.pb.h  hello.pb.cc  hello.pb.h  hello.proto
proto/py/: dashboard.proto  hello.proto  hello_pb2.py  hello_pb2_grpc.py  py_proto_compile.bat
